# CLionProjects

./: README.md
opus-decode/: CMakeLists.txt  main.c  ringbuffer.c
opus-decode/include/: ringbuffer.h
opus-decode/lib/: opus.lib
